--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cgyp-dot-com",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jeff-cortese.github.io/cgyp-dot-com",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -11,13 +12,15 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^6.0.110",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "gh-pages": "^1.1.0",
     "typescript": "^2.8.3"
   }
 }
