--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/jsonfile": "^4.0.1",
     "feed-to-json-promise": "^1.6.0",
+    "jsonfile": "^4.0.0",
     "ts-node": "^6.1.0",
     "typescript": "^2.9.1"
   }
