--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts-ts": "2.15.1",
-    "xml-js": "^1.6.4"
+    "rxjs": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
